cncamp/cloudnative/classpractices/ch12/tracing/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jaeger
  name: jaeger
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
      annotations:
        sidecar.istio.io/inject: "false"
        prometheus.io/scrape: "true"
        prometheus.io/port: "14269"
    spec:
      containers:
        - name: jaeger
          image: "docker.io/jaegertracing/all-in-one:1.23"
          livenessProbe:
            httpGet:
              port: 14269
              path: /
          readinessProbe:
            httpGet:
              port: 14269
              path: /
          volumeMounts:
            - name: data
              mountPath: "/badger"
          resources:
            requests:
              cpu: 10m
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jaeger
  name: tracing
  namespace: istio-system
spec:
  selector:
    app: jaeger
  type: ClusterIP
  ports:
    - name: http-query
      port: 80
      targetPort: 16686
      protocol: TCP
    # Note: change port name if add '--query.grpc.tls.enable=true'
    - name: grpc-query
      port: 16685
      targetPort: 16685
      protocol: TCP
---
# Jaeger implements the Zipkin API.
# To support swapping out the tracing backend, use a Service named Zipkin.
apiVersion: v1
kind: Service
metadata:
  labels:
    name: zipkin
  name: zipkin
  namespace: istio-system
spec:
  selector:
    app: jaeger
  ports:
    - name: http-query
      port: 9411
      targetPort: 9411
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jaeger
  name: jaeger-collector
  namespace: istio-system
spec:
  selector:
    app: jaeger
  type: ClusterIP
  ports:
    - name: jaeger-collector-http
      port: 14268
      targetPort: 14268
      protocol: TCP
    - name: jaeger-collector-grpc
      port: 14250
      targetPort: 14250
      protocol: TCP
    - name: zipkin-http
      port: 9411
      targetPort: 9411
